<resources>
    <string name="app_name">Gasto De Viagem</string>
    <string name="pre_o_por_litro_de_gasolina">Preço por litro de gasolina</string>
    <string name="autonomia">Autonomia</string>
    <string name="km_s_rodados_por_litro">KM\'s rodados por litro</string>
    <string name="seu_gasto_total_ser_de">Seu gasto total será de</string>
    <string name="calcular">calcular</string>
    <string name="total_de_quil_metros">Total de quilômetros</string>
    <string name="pre_o">Preço</string>
    <string name="dist_ncia">Distância</string>
</resources>