<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top|center"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/et_distancia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:fontFamily="@font/montserrat"
        android:hint="@string/dist_ncia"
        android:inputType="numberDecimal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:text="@string/total_de_quil_metros" />

    <EditText
        android:id="@+id/et_preco"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:hint="@string/pre_o"
        android:inputType="numberDecimal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:text="@string/pre_o_por_litro_de_gasolina" />

    <EditText
        android:id="@+id/et_autonomia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:hint="@string/autonomia"
        android:inputType="numberDecimal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:text="@string/km_s_rodados_por_litro" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:text="@string/seu_gasto_total_ser_de"
        android:textAllCaps="true"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_valor_total"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:text="0 R$"
        android:textAllCaps="true"
        android:textColor="#b3c0d4"
        android:textFontWeight="700"
        android:textSize="40sp" />

    <Button
        android:id="@+id/bt_calcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#24b59e"
        android:fontFamily="@font/montserrat"
        android:padding="20dp"
        android:text="@string/calcular"
        android:textAllCaps="true"
        android:textColor="#FFF"
        android:textFontWeight="700"
        android:textSize="20sp" />
</LinearLayout>